# amake

./: .gitignore  README.md  amake.py  hook-pyguiadapterlite.py  main.py  pyproject.toml  requirements.txt
amake/: _assets.py  _messages.py  appconfig.py  appsettings.py  assets.py  common.py  consts.py  i18n.py  makeoptions.py  processor.py  processors.py  schema.py  utils.py  variable.py
amake/core/: __init__.py  _aboutdlg.py  actions.py  amake.py  cmd.py  eventhandler.py  menus.py  widgets.py
amake/editor/: __init__.py  _edit_window.py  _general_page.py  _general_tab.py  _preview_window.py  _variables_page.py  _variables_tab.py  _widgets.py  common.py  editor.py
amake/tools/: __init__.py  _appconfig.py  _edit.py  _generate.py  _init.py  _main.py  _process.py  common.py
